# UARTMatrixApp

./: Cargo.toml  README.md
libuartmatrix/: Cargo.toml  libumx.h
libuartmatrix/src/: crc.rs  enums.rs  lib.rs
uartmatrixapp/: Cargo.toml
uartmatrixapp/src/: direct_mode_ui.rs  helper_structs.rs  main.rs  rect.rs  serial.rs  text_mode_ui.rs
