[package]
name = "uartmatrixapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libuartmatrix = { path = "../libuartmatrix" }
serialport = "4.0.1"
iced = { version = "0.3.0", features = ["glow", "canvas", "glow_canvas"] }
image = "0.23.14"
native-dialog = "0.5.5"
